<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FC_ParallelFinished" Id="{fa871353-adac-4079-8bb6-140781aec04d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION FC_ParallelFinished : BOOL
(*return value=false: parallel process not finished *)
VAR_INPUT
	iIModuleNum:INT;(*module number*)
	iIRequestID:INT;(*source process ID*)
	iIExecuteID: INT; (*destination process ID*)
END_VAR
VAR
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*parallel process finish ,return value  true*)
IF asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xRunning AND asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xFinished THEN
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].iRequestID:=-1;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].iJobNum:=0;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xComplete:=TRUE;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xFinished:=FALSE;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xRequestSucceed:=FALSE;
	asModuleSeqData[iIModuleNum].asSequenceData[iIRequestID].aiParIDCreated[iIExecuteID]:=-1;
	asModuleSeqData[iIModuleNum].asSequenceData[iIRequestID].iNumOfParID:=asModuleSeqData[iIModuleNum].asSequenceData[iIRequestID].iNumOfParID-1;
	FC_ParallelFinished:=TRUE;
ELSE
	FC_ParallelFinished:=FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FC_ParallelFinished">
      <LineId Id="16" Count="11" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>