<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FC_ParallelRequest" Id="{b468a958-c6a5-48a1-a06f-8f20fb5e0486}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION FC_ParallelRequest : BOOL
(*return value=false: parallel process is running *)
VAR_INPUT
	iIModuleNum:INT;(*module number*)
	iIRequestID:INT;(*source process ID*)
	iIExecuteID: INT; (*destination process ID*)
	iIJobNum:INT;(*program job num*)
END_VAR

VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*process not running ,return value  true*)
IF asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].iRequestID=-1 THEN
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].iRequestID:=iIRequestID;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].iJobNum:=iIJobNum;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xComplete:=FALSE;
	asModuleSeqData[iIModuleNum].asSequenceData[iIExecuteID].xRequestSucceed:=TRUE;
	asModuleSeqData[iIModuleNum].asSequenceData[iIRequestID].aiParIDCreated[iIExecuteID]:=1;
	asModuleSeqData[iIModuleNum].asSequenceData[iIRequestID].iNumOfParID:=asModuleSeqData[iIModuleNum].asSequenceData[iIRequestID].iNumOfParID+1;
	FC_ParallelRequest:=TRUE;
ELSE
	FC_ParallelRequest:=FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FC_ParallelRequest">
      <LineId Id="19" Count="10" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>